--- a/src/css/style.css
+++ b/src/css/style.css
@@ -78,7 +78,7 @@ p{
     top: 15px;
 }
 .morero{
-    position: fixed;
+    position: absolute;
     z-index: 30;
     width: 200px;
     height: 200px;
