--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,10 +25,10 @@ p{
     top: 90px;
     left: 350px;
     z-index: 20;
-position: absolute;
+    position: absolute;
     height: 450px;
     width: 550px;
- opacity: 0.4;
+    opacity: 0.4;
 }
 
 .gura{
@@ -78,6 +78,21 @@ position: absolute;
     top: 150px;
     left: 910px;
 }
+.morerore{
+    top: 100px;
+    left: 355px;
+    z-index: 25;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+}
+#firstlink{
+    top: 100px;
+    left: 378px;
+    z-index: 25;
+    position: absolute;
+    color: aquamarine;
+}
 /*differentiate it when it reach certain amount, I mean the device screen size*/
 @media (max-width: 600px) {
     body{
@@ -86,15 +101,14 @@ position: absolute;
     .firstndimg{
         width: 330px;
         height: 550px;
-      top: 200px;
-      left: 20px;
+        top: 200px;
+        left: 20px;
     }
     .gura{
-       height: 100px;
+        height: 100px;
         top: 1100px;
     }
     .anothergura{
-     
         height: 200px;
         top: 850px;
     }
@@ -103,15 +117,23 @@ position: absolute;
         left: 120px;
     }
     .morero{
-       top: 880px;
+        top: 880px;
         left: 200px;
     }
     h1{
-   left: 20px;
-    top: 50px;
+        left: 20px;
+        top: 50px;
     }
     p{ 
-    left: 20px;  
-     top: 130px;
+        left: 20px;  
+        top: 130px;
+    }
+    .morerore{
+        top: 220px;
+        left: 30px;  
+    }
+    #firstlink{
+        top: 220px;
+        left: 55px;
     }
 }
